@@ -44,6 +44,11 @@ GENERATED= $(srcdir)/libxml2class.py \
 $(GENERATED): $(srcdir)/$(GENERATE) $(API_DESC)
 	cd $(srcdir) && $(PYTHON) $(GENERATE)
 
+dummy:
+
+tests: dummy
+	cd tests && $(MAKE) tests
+
 clean:
 	rm -f $(GENERATED) *.o _libxml.so *.pyc libxml2.py
 
