@@ -5,7 +5,6 @@
 Things to do:
 -------------
 
-- handling of node.content
 - SAX interfaces
 - memory debug interfaces
 - enums -> libxml.py
@@ -41,5 +40,6 @@ Done:
   Done, a bit ugly by running new makes in %install for each level
   found.
 - error redirections and preformat
+- handling of node.content
 
 Daniel Veillard
