@@ -45,7 +45,7 @@ class xmlCore:
 		return None
 	    return xmlNode(_obj=ret)
 	elif attr == "content":
-	    return self.content()
+	    return _libxml.xmlNodeGetContent(self._o)
 	elif attr == "name":
 	    return _libxml.name(self._o)
 	elif attr == "type":
@@ -146,6 +146,14 @@ def xpathObjectRet(o):
 #
 def registerXPathFunction(ctxt, name, ns_uri, f):
     ret = _libxml.xmlRegisterXPathFunction(ctxt, name, ns_uri, f)
+
+#
+# A parser context
+#
+class parserCtxt:
+    def __init__(self, _obj=None):
+        self._o = _obj
+    
 
 #
 # Everything below this point is automatically generated
